--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" 
     crossorigin="anonymous">
     <link href="index.css" rel="stylesheet">
+    <script defer src="script.js"></script>
 </head>
 <body class="bg-light d-flex justify content-center align-items-center vh-100">
     <div class="container text-center">
@@ -20,7 +21,7 @@
                         <div id="game-status" class="alert alert-primary col">Turno: x</div>
                     </div>
                     <div class="row">
-                        <div id="cell-0" class="grid-item col border bg-white p-4 fs-1 fw-bold">x</div>
+                        <div id="cell-0" class="grid-item col border bg-white p-4 fs-1 fw-bold"></div>
                         <div id="cell-1" class="grid-item col border bg-white p-4 fs-1 fw-bold"></div>
                         <div id="cell-2" class="grid-item col border bg-white p-4 fs-1 fw-bold"></div>
                     </div>
@@ -30,7 +31,7 @@
                         <div id="cell-5" class="grid-item col border bg-white p-4 fs-1 fw-bold"></div>
                     </div>
                     <div class="row">
-                        <div id="cell-6" class="grid-item col border bg-white p-4 fs-1 fw-bold">o</div>
+                        <div id="cell-6" class="grid-item col border bg-white p-4 fs-1 fw-bold"></div>
                         <div id="cell-7" class="grid-item col border bg-white p-4 fs-1 fw-bold"></div>
                         <div id="cell-8" class="grid-item col border bg-white p-4 fs-1 fw-bold"></div>
                     </div>
